
???? 0.9.19.6

    programmer visible changes:
    * Replaced default value path_so_far=list() with path_so_far=None
    * fixed wrong parameter name on CopyTool_win_xcopy.copy_dir_files_to_dir

    user visible changes, client:
    * check-checksum command was defined by mistake to require --out command line option. Now removed.

15/3/2015 0.10.0.4
    user visible changes, client:
    * Better, more meaningful progress messages.
    * GUIDs that have upper case characters are converted to lower case.
    * HAVE_INFO_MAP_PATH file is copied to the SITE_HAVE_INFO_MAP_PATH for possible usage by remove command.
    * SITE SITE_HAVE_INFO_MAP_PATH is used by remove if HAVE_INFO_MAP_PATH was not found. This was done because when removing installation that was done from offline folder, Central will not pass LOCAL_REPO_SYNC_DIR to instl. HAVE_INFO_MAP_PATH depends on LOCAL_REPO_SYNC_DIR.
    * New variable HAVE_INFO_MAP_FILE_NAME, used by HAVE_INFO_MAP_PATH, NEW_HAVE_INFO_MAP_PATH, SITE_HAVE_INFO_MAP_PATH.
    * Added time measurements to create urls
    * Sync command: When no files to sync created batch file will have one progress item: "Done Sync".
    * Sync command: When no dirs to create no prgress items will be created.

    user visible changes, admin:
    * Admin variable MAX_FILE_SIZE renamed MIN_FILE_SIZE_TO_WTAR.
    * New admin variable: WTAR_BY_FILE_SIZE_EXCLUDE_REGEX. Files names passing this regex will not be wtarred. This was done mainly to disable wtarring of instl itself when updating it.
    * Variable WTAR_REGEX split in to twp: FOLDER_WTAR_REGEX, FILE_WTAR_REGEX to allow separation between files and folders when choosing what to wtar.
    * repo rev file has new variable INDEX_URL_RELATIVE_PATH, for the convenience of the secure URL creating code.
    * improved the help for unwtar command
    * New command read-yaml, just reads a yaml file, can be used to check file's syntax and structure. (admin)